# bomberman

./: .appveyor.yml  .clang-format  .codecov.yml  .coveragerc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  sonar-project.properties  todo.note
bomberman/: CMakeLists.txt
bomberman/Bomberman/Private/: Board.cpp  Board.hpp  Bomberman.cpp  Bomberman.hpp  Entity.cpp  GreenAllert.cpp  GreenAllert.hpp  RedAllert.cpp  RedAllert.hpp
bomberman/Bomberman/Public/: Entity.hpp
bomberman/Dummy_UT/: dummy_class.cpp  dummy_class.hpp  dummy_class_mock.hpp  dummy_class_test.cpp
bomberman/Physics/Private/: Collider.cpp  Collision.cpp  CollisionScript.cpp
bomberman/Physics/Public/: AABB.hpp  Collider.hpp  Collision.hpp  CollisionScript.hpp
bomberman/docs/: SUMMARY.md
bomberman/docs/uml_src/: Activity_2_1_BombLauncher.uml  UC_2_1.uml  UC_2_2.uml  UC_3_2.uml  domain_model.uml  player_seq.uml
src/: CMakeLists.txt
src/editor/: CMakeLists.txt
src/editor/include/editor/: HotReload.hpp
src/editor/src/: ColdReload.cpp  JetLive.cpp
src/environment_test/: CMakeLists.txt  cpp17Test.cpp
src/examples/: CMakeLists.txt  SimpleRectangleDraw.cpp
src/game/: BasicMap.cpp  BasicMap.hpp  BasicMap.ut.cpp  Bomb.cpp  Bomb.hpp  BombFactory.hpp  BombLauncher.hpp  BombLauncher.mock.hpp  BombPosition.hpp  BombTest.cpp  Bomberman.cpp  Bomberman.hpp  Bomberman.ut.cpp  BombermanGameWorld.cpp  BombermanGameWorld.hpp  BoundaryWallsPositionsGenerator.cpp  BoundaryWallsPositionsGenerator.hpp  BoundaryWallsPositionsGenerator.ut.cpp  CMakeLists.txt  DefaultBombFactory.cpp  DefaultBombFactory.hpp  DeltaTime.hpp  Direction.hpp  Distance.hpp  ElapsedTime.hpp  Entity.hpp  Entity.ut.cpp  ExplosionPosition.hpp  ExplosionRange.cpp  ExplosionRange.hpp  FieldSize.hpp  GameWorld.cpp  GameWorld.hpp  GameWorld.mock.hpp  HumanPlayer.hpp  HumanPlayerSfml.cpp  HumanPlayerSfml.hpp  InsideWallsPositionsGenerator.cpp  InsideWallsPositionsGenerator.hpp  InsideWallsPositionsGenerator.ut.cpp  (+27 more)
src/graphics/: CMakeLists.txt  DrawableFactory.cpp  DrawableFactory.hpp  RenderEngine.hpp  RenderEngine.ut.cpp  RenderId.fwd.hpp  RenderId.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTarget.mock.hpp  RendererPool.hpp  RendererPool.ut.cpp  RendererPoolFactory.hpp  RendererPoolSfml.cpp  RendererPoolSfml.hpp  RendererPoolSfml.sct.cpp  RendererPoolSfml.ut.cpp  RendererPoolSfmlFactory.cpp  RendererPoolSfmlFactory.hpp  RendererSfml.cpp  RendererSfml.hpp  RendererSfml.ut.cpp  SfmlRectangleShape.hpp  SfmlRectangleShape.ut.cpp  SfmlRenderTarget.cpp  SfmlRenderTarget.hpp  SfmlRenderTarget.mock.hpp  SfmlRenderTarget.ut.cpp
src/graphics/core/: CMakeLists.txt  ContextRenderer.hpp  Factory.cpp  RenderTarget.stub.hpp  RendererIdGenerator.cpp  RendererIdGenerator.hpp  RendererPoolSfml.cpp  RendererPoolSfml.hpp  RendererPoolSfml.ut.cpp  SfmlRectangleShape.cpp  SfmlRectangleShape.hpp  SfmlRectangleShape.ut.cpp  SfmlRenderTarget.cpp  SfmlRenderTarget.hpp  SfmlRenderTarget.ut.cpp  SfmlWindow.hpp  SfmlWindowFacade.hpp  WindowSfml.cpp  WindowSfml.hpp  WindowSfml.ut.cpp  context_renderer.hpp  factory.cpp  render_target.stub.hpp  renderer_id_generator.cpp  renderer_id_generator.hpp  renderer_pool_sfml.cpp  renderer_pool_sfml.hpp  renderer_pool_sfml.ut.cpp  sfml_rectangle_shape.cpp  sfml_rectangle_shape.hpp  sfml_rectangle_shape.ut.cpp  sfml_render_target.hpp  sfml_render_target.ut.cpp  sfml_window.hpp  sfml_window_facade.cpp  sfml_window_facade.hpp  window_sfml.cpp  window_sfml.hpp  window_sfml.ut.cpp
src/graphics/details/: Conversion.cpp  Conversion.hpp  RenderTarget.ut.cpp  RendererIdGenerator.hpp  RendererPoolFactory.cpp  RendererPoolSfml.cpp  RendererPoolSfml.hpp  RendererPoolSfml.ut.cpp  SfmlRectangleShape.cpp
src/graphics/examples/: CMakeLists.txt  SimpleMovingRectangle.cpp  SimpleRectangleDraw.cpp  clock.cpp  draw.cpp  lerp.cpp  nlerp.cpp  simple_moving_rectangle.cpp  simple_rectangle_draw.cpp  slerp.cpp
src/graphics/examples/SimpleMovingRectangle/: CMakeLists.txt  SimpleMovingRectangle.cpp
src/graphics/examples/SimpleRectangleDraw/: CMakeLists.txt  SimpleRectangleDraw.cpp
src/graphics/includes/graphics/: Factory.hpp  Position.hpp  RendererId.hpp  RendererPool.hpp  RendererPool.mock.hpp  RendererPoolFactory.hpp  Window.hpp  WindowSize.hpp  color.hpp  factory.hpp  renderer_id.hpp  renderer_pool.hpp  renderer_pool.mock.hpp  window.hpp  window_change_observer.hpp  window_change_observer.mock.hpp  window_event.hpp  window_size.hpp
src/graphics/src/: CMakeLists.txt  ContextRenderer.hpp  RenderTarget.cpp  RenderTarget.hpp  RendererIdGenerator.hpp  RendererPoolFactory.cpp  RendererPoolSfml.cpp  RendererPoolSfml.hpp  RendererPoolSfml.ut.cpp  SfmlRectangleShape.cpp  SfmlRectangleShape.hpp  SfmlRectangleShape.ut.cpp  context_renderer.hpp  context_renderer.mock.hpp  factory.cpp  render_target.stub.hpp  renderer_id_generator.cpp  renderer_id_generator.hpp  renderer_pool_sfml.cpp  renderer_pool_sfml.hpp  renderer_pool_sfml.ut.cpp  sfml_rectangle_shape.cpp  sfml_rectangle_shape.hpp  sfml_rectangle_shape.ut.cpp  sfml_render_target.hpp  sfml_render_target.ut.cpp  sfml_renderer_pool.cpp  sfml_renderer_pool.hpp  sfml_renderer_pool.ut.cpp  sfml_texture_factory.hpp  sfml_texture_factory.mock.hpp  sfml_texture_loader.cpp  sfml_texture_loader.hpp  sfml_texture_loader.mock.hpp  sfml_texture_loader.ut.cpp  sfml_texture_warehous.cpp  sfml_texture_warehous.hpp  sfml_texture_warehous.ut.cpp  sfml_texture_warehouse.cpp  sfml_texture_warehouse.hpp  (+10 more)
src/graphics/src/core/: ContextRenderer.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTarget.ut.cpp  RendererPoolFactory.cpp  RendererPoolSfml.ut.cpp  SfmlRectangleShape.hpp  SfmlWindowFacade.cpp  SfmlWindowFacade.hpp  WindowSfml.cpp  WindowSfml.hpp  (+1 more)
src/graphics/types/: Position2f.hpp  Size2f.hpp  WindowSize.hpp  position2f.hpp  size2f.hpp  window_size.hpp
src/math/: CMakeLists.txt  Position.hpp  Size.hpp
src/physics/: CMakeLists.txt  ConcretePhysicsEngine.hpp  PhysicsEngine.hpp  PhysicsEngine.mock.hpp  PhysicsEngine.ut.cpp  PhysicsId.hpp  PhysicsId.ut.cpp
(+84 files in other folders)
